--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" netlify>
+									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
